# disk-scanner

./: .gitignore  ADVANCED_UI_IMPLEMENTATION_COMPLETE.md  AGENTS.md  ARCHITECTURE_VISUALIZATION_CONCEPT.md  ARCHITECTURE_VISUALIZATION_IMPLEMENTATION_COMPLETE.md  AUDIT_ACTION_ITEMS.md  AUTOMATIC_DIAGRAM_GENERATION_COMPLETE.md  BEADS_SYNC_QUICKSTART.md  BEAD_005_006_IMPLEMENTATION.md  BEAD_009_014_COMPLETION_REPORT.md  BEAD_009_014_IMPLEMENTATION.md  BEAD_015_020_IMPLEMENTATION.md  BEAD_021_026_IMPLEMENTATION.md  BEAD_028_035_IMPLEMENTATION.md  BRANDING_UPDATE.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CI_CD_CLEANUP_COMPLETE.md  COMPREHENSIVE_AUDIT_REPORT_2025-10-30.md  COMPREHENSIVE_AUDIT_REPORT_OCT31.md  CONFIGURATION_CONTRAST_FIX.md  CRASH_RECOVERY_OCT31.md  CTO_DASHBOARD_SUMMARY.md  DARK_MODE_FIXES_NEEDED.md  DESIGN_SPEC.md  DESKTOP_UI_OVERVIEW.md  DESKTOP_UI_TESTING_GUIDE.md  DIRECTORY_SELECTION_IMPROVEMENTS.md  EDGS_BEADS_OPENSPEC_AUDIT.md  EDGS_PACS_MILESTONE.md  EDGS_RECOVERY_COMPLETE.md  EDGS_SCHEDULE.md  FEATURE_PIPELINE_STATUS.md  FILE_ANALYSIS_CLARIFICATION.md  ICLOUD_DRIVE_FIX.md  LICENSE  MACM_V1_IMPLEMENTATION_COMPLETE.md  MVP_ACCELERATION_COMPLETE.md  MVP_PRODUCTION_PIPELINE.md  MVP_ROADMAP_ANALYSIS.md  (+51 more)
.beads/: issues.jsonl
.beads/edgs/phase-0/: PoE-MANIFEST.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: beads-sync.yml  release.yml  test.yml
.laio/: constitution.yaml
.opencode/: SETUP.md  env.sh  opencode.jsonc  setup.sh
.opencode/agent/: core-coder.md  svelte-expert.md  vos-architect.md
.opencode/command/: init.md
.pacs/: baseline.json
dmg-contents/Project Scanner.app/Contents/: Info.plist
docs/: ARCHITECTURE.md  BEADS_GITHUB_INTEGRATION.md  BEADS_INTEGRATION_STATUS.md  BEADS_ISSUE_TRACKER.md  CONTRIBUTING.md  DELIVERABLES.md  EDGS_INTEGRATION.md  GIT_ASSISTANCE_FEATURE.md  MASTER_WORKFLOW_GUIDE.md  OPENSPEC_BD_EDGS_INTEGRATION.md  OPENSPEC_CHANGE_TEMPLATES.md  PHASE_1_COMPLETION_GATE.md  PHASE_1_WEEK_1_GATE_COMPLETE.md  PHASE_2_COMPLETION_GATE.md  PRODUCTION_READINESS.md  QUICKSTART_OPENSPEC_BD_EDGS.md  START_HERE.md  TAURI_SVELTE_SCAFFOLDING_BEST_PRACTICES.md  TESTING.md  beads-export.json
docs/analysis/: ANALYSIS.md  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  PROJECT_STATUS.md  RECOMMENDATIONS.md  ROOT_CLEANUP_PLAN.md
docs/compliance/: TES-2025-v6.9.md
docs/design/: JUNK_FILE_DETECTION_STRATEGY.md  SAFETY_FIRST_ARCHITECTURE.md  TAURI_ARCHITECTURE_MODERNIZATION.md  V2_FEATURE_ROADMAP.md
docs/history/: RELEASE_NOTES.md
docs/methodology/: MACM-V1-IMPLEMENTATION.md
docs/schedules/: EDGS_SCHEDULE.md  FAST_TRACK_GA.md  MACM-V1.md
openspec/: project.md
openspec/changes/add-path-validation/: proposal.md  tasks.md
openspec/changes/architecture-visualization/: proposal.md  tasks.md
openspec/changes/cto-dashboard/: proposal.md  tasks.md
openspec/changes/monaco-editor-panel/: proposal.md  tasks.md
openspec/changes/mvp-production-pipeline/: proposal.md  tasks.md
openspec/changes/mvp-roadmap/: proposal.md  (+1 more)
scripts/: beads-parser.js  beads-to-github.sh  create-dmg.sh  dynamic-vite.js  github-to-beads.sh  sign-and-notarize.sh  update-beads-links.js
src/: App.svelte  app.css  index.html
src-tauri/: Cargo.toml  ERROR_HANDLING_POLICY.md  build.rs  clippy.toml  tauri.conf.json
src-tauri/.pacs/reports/: project-compliance-report.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/arch_viz/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/models/: compliance.rs  core.rs  mod.rs  project_audit.rs  specification.rs
src-tauri/src/pacs/: mod.rs
src-tauri/src/utils/: analytics.rs  backup_detection.rs  cleanup.rs  cloud_storage.rs  compliance_validator.rs  compression.rs  crash_reporter.rs  deletion_log.rs  external_drives.rs  file_statistics.rs  ignore_patterns.rs  mod.rs  network.rs  path.rs  patterns.rs  port.rs  scan.rs  scan_enhanced.rs  scan_progress.rs  scan_tests.rs  scheduler.rs  spec_parser.rs  symlink.rs  undo.rs  updater.rs
src-tauri/tests/: integration_tests.rs  security_integration_test.rs
src/lib/: accessibility.ts  design-tokens.css  performance.ts  stores-enhanced.ts  stores.js  stores.test.js  stores.ts  themes.css  utils.js
src/test/: setup.js
ui/: App.svelte  index.html  tailwind.config.js
ui/ui/: BloatList.svelte  DiskInfo.svelte  DuplicateList.svelte
(+73 files in other folders)
