[package]
name = "disk-bloat-scanner"
version = "0.1.0"
description = "Cross-platform desktop app by Tempext AI for identifying and managing disk space usage by detecting build artifacts, duplicate files, and large files on your system"
authors = ["Tempext AI"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/disk-bloat-scanner"
homepage = "https://github.com/yourusername/disk-bloat-scanner"
readme = "../README.md"
keywords = ["disk-space", "cleanup", "duplicates", "tauri", "desktop"]
categories = ["command-line-utilities", "filesystem"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "disk_bloat_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
sysinfo = "0.30"
sha2 = "0.10"
trash = "3"
rayon = "1.10"
ignore = "0.4"
tauri-plugin-dialog = "2.4.0"
anyhow = "1.0.100"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-json = "0.20"
byte-unit = "5"
dirs = "5"
thiserror = "2"
rand = "0.8"
csv = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
flate2 = "1.0"
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[lints.clippy]
# Pedantic lints for code quality
pedantic = "warn"
# Nursery lints (experimental but useful)
nursery = "warn"
# Performance lints
perf = "warn"
# Cargo lints
cargo = "warn"

# Specific lints we want to enforce
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
